--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Denis Vuyka <denis.vuyka@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.12.3",
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
     "object-assign": "^2.0.0",
